@@ -160,8 +160,7 @@ enum ShootType_t
 	NM_SHOOT_TARSALARROW	= 0x2B, //43
 	NM_SHOOT_VORTEXBOLT	= 0x2C, //44
 	NM_SHOOT_UNK2		= 0x2D, //45 DEBUG!
-	NM_SHOOT_FOOTBALL	= 0x2E, //46
-	NM_SHOOT_LAST		= NM_SHOOT_FOOTBALL,
+	NM_SHOOT_LAST		= NM_SHOOT_UNK2,
 
 	//for internal use, dont send to client
 	NM_SHOOT_WEAPONTYPE	= 0xFE, //254
