@@ -257,7 +257,6 @@ CONST_ANI_EXPLOSION = 40
 CONST_ANI_CAKE = 41
 CONST_ANI_TARSALARROW = 43
 CONST_ANI_VORTEXBOLT = 44
-CONST_ANI_FOOTBALL = 46
 CONST_ANI_WEAPONTYPE = 254
 CONST_ANI_NONE = 255
 
