@@ -21,9 +21,9 @@
 #ifndef __OTSERV_DEFINITIONS_H__
 #define __OTSERV_DEFINITIONS_H__
 
-#define CLIENT_VERSION_MIN 944
-#define CLIENT_VERSION_MAX 946
-#define CLIENT_VERSION_MIN_STR "9.44"
+#define CLIENT_VERSION_MIN 950
+#define CLIENT_VERSION_MAX 950
+#define CLIENT_VERSION_MIN_STR "9.50"
 
 #ifdef _WIN32
 #ifndef WIN32
