@@ -86,7 +86,8 @@ enum clientVersion_t
 	CLIENT_VERSION_944_V2 = 32,
 	CLIENT_VERSION_944_V3 = 33,
 	CLIENT_VERSION_944_V4 = 34,
-	CLIENT_VERSION_946 = 35
+	CLIENT_VERSION_946 = 35,
+	CLIENT_VERSION_950 = 36
 };
 
 enum rootattrib_
